# SFsnake

./: BackGround.cpp  BackGround.h  CMakeLists.txt  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  Obstacle.cpp  Obstacle.h  README.md  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h  h -u origin master  main.cpp
